Bug 266716 - REGRESSION (268779@main): Style sheets fail to load in the 交通银行 app on iOS
Summary: REGRESSION (268779@main): Style sheets fail to load in the 交通银行 app on iOS
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Platform (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Wenson Hsieh
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-12-20 10:53 PST by Wenson Hsieh
Modified: 2023-12-20 14:01 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wenson Hsieh 2023-12-20 10:53:24 PST
rdar://118649749
Comment 1 Wenson Hsieh 2023-12-20 11:02:02 PST
Pull request: https://github.com/WebKit/WebKit/pull/22123
Comment 2 EWS 2023-12-20 14:01:55 PST
Committed 272379@main (15862a58a171): <https://commits.webkit.org/272379@main>

Reviewed commits have been landed. Closing PR #22123 and removing active labels.