Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.h
@@ -114,6 +114,7 @@ enum class SDKAlignedBehavior {
     ResettingTransitionCancelsRunningTransitionQuirk,
     OnlyLoadWellKnownAboutURLs,
     AsyncFragmentNavigationPolicyDecision,
+    DoNotLoadStyleSheetIfHTTPStatusIsNotOK,
 
     NumberOfBehaviors
 };
